overflow issue fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
-/* #root {
-  margin: 100px auto;
-  max-width: 500px;
-  padding-bottom: 100px;
-} */
+#root {
+  contain: paint;
+}
 
 .card {
   position: relative;
@@ -22,7 +20,7 @@
 
 
 .card-container {
-  overflow: hidden;
+  overflow: hidden !important;
   background-color: black;
   display: flex;
   align-items: center;
